--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
-@import url(http://fonts.googleapis.com/css?family=Squada+One);
+@import url(https://fonts.googleapis.com/css?family=Squada+One);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 html {
   font-family: sans-serif;
