--- a/stylesheets/globals/_typography.scss
+++ b/stylesheets/globals/_typography.scss
@@ -3,7 +3,7 @@
 ================= */
 
 // SQUADA ONE
-@import url(http://fonts.googleapis.com/css?family=Squada+One);
+@import url(https://fonts.googleapis.com/css?family=Squada+One);
 
 // OPEN SANS
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
